コードフォントをWebセーフフォントに変更

--- a/themes/icarus/include/style/slim-bulma-stylus/variables.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/variables.styl
@@ -7,7 +7,7 @@ $body-size ?= 14px
 $body-background-color ?= #f7f7f7
 
 $family-sans-serif ?= sans-serif
-$family-code ?= 'Source Code Pro', sans-serif
+$family-code ?= 'Consolas', 'monaco', 'BIZ UDGothic', monospace
 
 $text-light ?= #595959
 
