--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -123,6 +123,7 @@ $link-preview-card-og-description-color ?= #525252
 
                 .og-image
                     max-width: 180px
+                    min-width: 180px
 
 // Overflow table
 .table-overflow
