記事カタログのデザインを修正

--- a/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
+++ b/themes/icarus/include/style/slim-bulma-stylus/element/content-large.styl
@@ -14,7 +14,7 @@
         color: $content-heading-color
         font-weight: $content-heading-weight
         line-height: $content-heading-line-height
-        scroll-margin: 0.5em
+        scroll-margin-top: 0.5em
 
     h2
         font-size: 1.75em
