--- a/themes/icarus/include/style/components/widget/toc-card.styl
+++ b/themes/icarus/include/style/components/widget/toc-card.styl
@@ -18,11 +18,13 @@
     .widget.card#toc
         display: none
         position: fixed
-        margin: 2rem 1rem
+        margin: 3rem 1.5rem
         left: 0
         right: 0
         bottom: 0
         z-index: 100
+        max-height: 70%
+        overflow: auto
 
         .card-content
             padding: 0
