--- a/themes/icarus/include/style/components/search.styl
+++ b/themes/icarus/include/style/components/search.styl
@@ -38,7 +38,7 @@ $searchbox-bg-pagination-item-disabled ?= $searchbox-bg-container
     top: 0
     left: 0
     width: 100%
-    height: 100%
+    height: 100vh
     z-index: 100
     font-size: 1rem
     background: $searchbox-bg-overlay
