記事カタログカードの表示を中央に寄せる

--- a/themes/icarus/include/style/components/widget/toc-card.styl
+++ b/themes/icarus/include/style/components/widget/toc-card.styl
@@ -18,7 +18,8 @@
     .widget.card#toc
         display: none
         position: fixed
-        margin: 3rem 1.5rem
+        margin: auto 1.5rem
+        top: 0
         left: 0
         right: 0
         bottom: 0
