--- a/themes/icarus/include/style/components/widget/toc-card.styl
+++ b/themes/icarus/include/style/components/widget/toc-card.styl
@@ -7,6 +7,11 @@
             ul
                 margin-right: 0
 
+            .level-left
+                overflow: hidden
+                white-space: nowrap
+                text-overflow: ellipsis
+
             .collapsed
                 & + .menu-list
                     display: none
