--- a/themes/icarus/include/style/components/widget/toc-card.styl
+++ b/themes/icarus/include/style/components/widget/toc-card.styl
@@ -24,12 +24,11 @@
         display: none
         position: fixed
         margin: auto 1.5rem
-        top: 0
+        top: 24px
         left: 0
         right: 0
-        bottom: 0
+        bottom: 96px
         z-index: 100
-        max-height: 70%
         overflow: auto
 
         .card-content
