--- a/themes/icarus/include/style/components/timeline.styl
+++ b/themes/icarus/include/style/components/timeline.styl
@@ -13,7 +13,7 @@ $timeline-bg-line ?= $card-background-color
 
 .timeline
     margin-left: 1rem
-    padding: 1rem 0 0 1.5rem
+    padding: 1rem 0 0 1rem
     border-left: 1px solid $timeline-fg-line
 
     .media
@@ -23,21 +23,18 @@ $timeline-bg-line ?= $card-background-color
             content: ''
             display: block
             position: absolute
-            left: calc(-.375rem - 1.5rem - .25px)
+            left: calc(-0.375rem - 1rem - 0.5px)
 
         &:before
-            width: .75rem
-            height: .75rem
-            top: calc(.5rem + 1.5 * .85rem / 2 - .75rem / 2)
+            width: 0.75rem
+            height: 0.75rem
+            top: calc(0.5rem + 0.375rem)
             background: $timeline-fg-circle
             border-radius: 50%
 
-        &:first-child:before
-            top: calc(2.5 * .85rem / 2 - .75rem / 2)
-
         &:last-child:after
-            width: .75rem
-            top: calc(.5rem + 1.5 * .85rem / 2 + .75rem / 2)
+            width: 0.75rem
+            top: calc(0.5rem + 0.75rem + 0.375rem)
             bottom: 0
             background: $timeline-bg-line
 
