記事カードのレイアウト及びデザインを修正

--- a/themes/icarus/include/style/components/article/small-card.styl
+++ b/themes/icarus/include/style/components/article/small-card.styl
@@ -2,6 +2,10 @@
 @import 'basic-card'
 
 .article
+    a.header
+        display: block
+        margin: 0 0 1.5rem
+
     a.content
         display: block
         width: -moz-fit-content
