--- a/themes/icarus/include/style/components/article/basic-card.styl
+++ b/themes/icarus/include/style/components/article/basic-card.styl
@@ -26,31 +26,30 @@
         margin-bottom: 0.25rem
 
     .article-categories
-        overflow-x: auto
-        align-items: flex-start
         display: flex
         flex-wrap: wrap
+        align-items: flex-start
         justify-content: flex-start
+        overflow-x: auto
+        column-gap: 0.5rem
 
         &:before
-            margin-right: 0.5rem
             content: '@'
 
         li + li:before
-            padding: 0 0.5rem
+            padding-right: 0.5rem
             content: '/'
 
     .article-tags
         display: flex
         flex-wrap: wrap
-        margin: 0 1.5rem 0.25rem
+        align-items: center
+        justify-content: flex-start
+        gap: 0.75rem 0.5rem
+        margin: 0 1.5rem
 
-        span
-            margin-right: 0.5rem
-
-        a
-            margin-right: 0.5rem
-            margin-bottom: 1rem
+        &::before
+            content: '#'
 
 .content
     margin: 0 1.5rem
