インデックスの記事カードのデザインを変更

--- a/themes/icarus/include/style/components/article/small-card.styl
+++ b/themes/icarus/include/style/components/article/small-card.styl
@@ -3,10 +3,12 @@
 
 .article
     a.header
+        @extend .link-muted
         display: block
         margin: 0 0 1.5rem
 
     a.content
+        @extend .link-muted
         display: block
         width: -moz-fit-content
         width: fit-content
