--- a/themes/icarus/include/style/components/timeline.styl
+++ b/themes/icarus/include/style/components/timeline.styl
@@ -28,15 +28,15 @@ $timeline-bg-line ?= $card-background-color
         &:before
             width: 0.75rem
             height: 0.75rem
-            top: calc(0.5rem + 0.375rem)
+            top: 0.775rem
             background: $timeline-fg-circle
             border-radius: 50%
 
         &:last-child:after
             width: 0.75rem
-            top: calc(0.5rem + 0.75rem + 0.375rem)
+            top: 1.525rem
             bottom: 0
             background: $timeline-bg-line
 
         &:first-child:last-child:after
-            top: calc(2.5 * .85rem / 2 + .75rem / 2)
+            top: 1.525rem
